<resources>
    <string name="app_name">婚礼帮</string>
    <string name="nav_1">淘婚品</string>
    <string name="nav_2">婚礼问问</string>
    <string name="nav_3">精选婚礼</string>
    <string name="nav_4">筹备项目</string>
    <string name="nav_5">个人中心</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
