<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_item1"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/nav_1"/>
    <item
        android:id="@+id/action_issue"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/nav_2"/>
    <item
        android:id="@+id/action_msg"
        android:icon="@drawable/main_menu_icon3"
        android:title="@string/nav_3"/>
    <item
        android:id="@+id/action_msg1"
        android:icon="@drawable/btn_tabbar_mail_normal"
        android:title="@string/nav_4"/>
    <item
        android:id="@+id/action_item3"
        android:icon="@drawable/ic_assignment_ind_black_24dp"
        android:title="@string/nav_5"/>
</menu>